calculate xirr on current investement value api with xirr gem sanitize code using rubocop on model, rake task, api and workers involved in first cut

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,6 +58,7 @@
       var data = event.detail[0];
       $('.current-value').text(data.current_value);
       $('.absolute-returns').text(data.absolute_returns + '%');
+      $('.xirr').text(data.xirr + '%');
       $('.output-data').removeClass('hidden');
     })
   });
